changed loadCalibration.cpp to show difference between original and calibrated images

--- a/PC_Code/calibration/makefile
+++ b/PC_Code/calibration/makefile
@@ -1,9 +1,15 @@
-all:
-	g++ calibrate.cpp -o cal `pkg-config --cflags --libs opencv`
-	g++ loadCalibration.cpp -o load `pkg-config --cflags --libs opencv`
-	g++ fiducial.cpp -o fid `pkg-config --cflags --libs opencv`
-	g++ takeFiducialImage.cpp -o fidim `pkg-config --cflags --libs opencv`
+all:	clean cal load fid fidim 
 
+cal:
+	g++ calibrate.cpp -o calibrate `pkg-config --cflags --libs opencv`
+load:
+	g++ loadCalibration.cpp -o loadCalibration `pkg-config --cflags --libs opencv`
 fid:
-	g++ fiducial.cpp -o fid `pkg-config --cflags --libs opencv`
+	g++ fiducial.cpp -o fiducial `pkg-config --cflags --libs opencv`
+fidim:
+	g++ takeFiducialImage.cpp -o takeFiducialImage `pkg-config --cflags --libs opencv`
+
+clean: 
+	rm -f calibrate loadCalibration fiducial takeFiducialImage
+	
 
